--- a/src/css/invoiceSummary.css
+++ b/src/css/invoiceSummary.css
@@ -669,7 +669,7 @@
 }
 
 .action-button.export:hover {
-  background: var(--primary-dark);
+  background: var(--primary-color);
   transform: translateY(-2px);
 }
 
@@ -2071,7 +2071,7 @@
 }
 
 .action-button.primary:hover {
-  background: var(--primary-dark);
+  background: var(--primary-color);
   transform: translateY(-1px);
 }
 
